Outstream removed and add a general function to print. Return bug fixed.

--- a/TwiaSharp.csproj
+++ b/TwiaSharp.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include=".Run\FIB.twi" />
+    <Content Include=".Run\LIB_1.twi" />
     <Content Include=".Run\EXAMPLE.twi" />
   </ItemGroup>
 
