--- a/TwiaSharp.csproj
+++ b/TwiaSharp.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include=".Run\TimeShow.twi" />
     <Content Include=".Run\LIB_1.twi" />
     <Content Include=".Run\EXAMPLE.twi" />
   </ItemGroup>
